attempting to fix issue with cart on small IOS devices - WHY ARE YOU LIKE THIS IOS?!

--- a/src/App.css
+++ b/src/App.css
@@ -411,10 +411,6 @@ header nav {
 	text-align: center;
 }
 
-.cart-container {
-	padding: 20px 30px;
-}
-
 /* headings */
 .wishlist-container h2,
 .cart-container h2 {
